--- a/style.css
+++ b/style.css
@@ -1,157 +1,126 @@
-* {
+body {
+    font-family: "Adobe Garamond", serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Adobe Garamond', serif; /* Changed font family */
-}
-
-body {
+  }
+  
+  .container {
+    display: flex;
+    height: 100vh;
+  }
+  
+  .left {
+    background-color: #f5f5f5;
+    flex: 1;
+    padding: 2rem;
+    position: relative;
+  }
+  
+  .right {
+    background-color: #ececec;
+    flex: 1;
+    padding: 2rem;
+    position: relative;
+  }
+  
+  .left-header {
+    position: fixed;
+    top: 2rem;
+    left: 2rem;
+  }
+  
+  .right-header {
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+  }
+  
+  .right-header nav a {
+    color: #000;
+    text-decoration: none;
+    margin-right: 1rem;
+    transition: color 0.3s;
+  }
+  
+  .right-header nav a:hover {
+    color: #666;
+  }
+  
+  
+.gif {
+    position: absolute;
+    object-fit: cover;
+    filter: grayscale(100%);
+    transition: all 0.3s;
+  }
+  
+  .gif-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: calc(100% - 5rem);
+    position: relative;
+    transform: translate(15%, 10%);
+  }
+  
+  .gif-container .gif {
+    width: calc(60vmin * 3/4);
+    aspect-ratio: 3/4;
+    position: absolute;
+  }
+  
+  .gif-container .gif:nth-child(1) {
+    z-index: 6;
+  }
+  
+  .gif-container .gif:nth-child(2) {
+    z-index: 5;
+    transform: scale(0.9) translateX(18%);
+  }
+  
+  .gif-container .gif:nth-child(3) {
+    z-index: 4;
+    transform: scale(0.81) translateX(36%);
+  }
+  
+  .gif-container .gif:nth-child(4) {
+    z-index: 3;
+    transform: scale(0.729) translateX(54%);
+  }
+  
+  .gif-container .gif:nth-child(5) {
+    z-index: 2;
+    transform: scale(0.6561) translateX(72%);
+  }
+  
+  .gif-container .gif:nth-child(6) {
+    z-index: 1;
+    transform: scale(0.59049) translateX(90%);
+  }
+  
+  .title-container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
     justify-content: center;
-    align-items: center;
-}
-
-header {
-    width: 87vw;
-    padding-top: 80px;
-    padding-bottom: 120px;
-    display: flex;
-    flex-direction: column; /* Added this line */
-    align-items: center; /* Changed from justify-content: space-between; */
-    text-align: center;
-}
-
-
-.header-left h1 {
-    font-family: 'Adobe Garamond', serif; /* Changed font family */
-    margin-bottom: 10px;
-    font-weight: bolder;
-    font-size: 4.5em;
-}
-
-.header-left p {
-    font-size: 1em;
-    color: #8e8e8e;
-}
-
-nav {
-    display: flex;
-    margin-top: 80px; /* Added this line */
-}
-
-
-nav a {
-    font-family: 'Adobe Garamond', serif; /* Changed font family */
+    height: calc(100% - 5rem);
+    margin-top: 3rem;
+  }
+  
+  .title {
+    font-size: 1.5rem; /* 1.5x larger titles */
+    color: #000;
     text-decoration: none;
-    color: #000000;
-    margin-left: 60px;
-    margin-right: 60px;
-    text-align: center;
-    font-weight: bolder;
-    font-size: 1.5em;
-}
-
-nav a:hover {
-    color: #8e8e8e;
-}
-
-main {
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #ffffff;
-    padding: 0px;
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, calc((90vw - 3 * 30px) / 3));
-    grid-gap: 10px 30px;
-    max-width: 1000px;
-    width: 90vw;
-    margin-top: -5%;
-    justify-content: center;
-    align-items: center;
-}
-
-.grid-item {
-    position: relative;
-    overflow: hidden;
-    background-color: #f5f5f5;
-}
-
-.grid-item::before {
-    content: "";
-    display: block;
-    padding-top: 100%;
-}
-
-.grid-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.title-grid {
-    position: relative;
-    overflow: hidden;
-    background-color: #ffffff;
-}
-
-.title-grid::before {
-    content: "";
-    display: block;
-    padding-top: 15%;
-}
-
-
-.grid-item-title {
-    font-family: 'Adobe Garamond', serif;
-    font-size: 1.5em;
-    font-style: bold;
-    color: #000000;
-    text-align: center;
-    position: absolute;
-    top: 20%; /* Adjust this value to move the title up or down */
-    left: 50%;
-    transform: translate(-50%, -50%);
-    white-space: nowrap;
-    max-width: 100%;
-}
-
-/* Hovering */
-.grid-text {
-    content: "";
-    font-family: 'Adobe Garamond', serif;
-    font-size: 1.5em; /* Adjust the font size as desired */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-
-.grid-item:hover .grid-text {
-    opacity: 1;
-}
-
-.grid-item:hover img {
-    opacity: 0.75; /* Change the opacity value to 0.2 (80% transparent) */
-}
-
-/* Hovering */
-
-footer {
-    padding-top: 20px;
-    padding-bottom: 60px;
-    display: flex;
-    justify-content: center;
-}
+    margin-bottom: 1rem;
+    cursor: pointer;
+    transition: color 0.3s;
+  }
+  
+  .title:hover {
+    color: #666;
+  }
+  
+  .title-number {
+    font-size: 0.8rem; /* H6 size number */
+    display: inline;
+    margin-right: 0.5rem;
+  }
